unpackaged/main/default/objects/sked_Account_Availability_Preference__c/fields/sked_Account__c.field-meta.xml
<CustomField>
    <fullName>sked_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>sked_Account_Availability_Preferences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>