unpackaged/main/default/objects/sked_Account_Availability_Preference__c/fields/sked_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Effective_End_Date__c</fullName>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>