unpackaged/main/default/objects/sked_Account_Availability_Preference__c/fields/sked_Restricted_Weekdays__c.field-meta.xml
<CustomField>
    <fullName>sked_Restricted_Weekdays__c</fullName>
    <label>Restricted Weekdays</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Days_of_Week</valueSetName>
    </valueSet>
</CustomField>