unpackaged/main/default/objects/sked_Account_Availability_Preference__c/fields/sked_Restricted_Weeks__c.field-meta.xml
<CustomField>
    <fullName>sked_Restricted_Weeks__c</fullName>
    <label>Restricted Weeks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Week 1</fullName>
            </value>
            <value>
                <fullName>Week 2</fullName>
            </value>
            <value>
                <fullName>Week 3</fullName>
            </value>
            <value>
                <fullName>Week 4</fullName>
            </value>
            <value>
                <fullName>Week 5</fullName>
            </value>
            <value>
                <fullName>Week 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>